# surrealdb-migrator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/01-friend_car/: up.surql
migrations/02-add_birthday_column/: up.surql
migrations/03-add_animal_table/: down.surql  up.surql
src/: lib.rs
