[package]
name = "surrealdb-migrator"
version = "0.1.4"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["database", "migration"]
description = "SurrealDB migrator"
repository = "https://github.com/prabirshrestha/surrealdb-migrator"
readme = "README.md"

[dependencies]
sha256 = "1.4.0"
surrealdb = "1.0.2"
thiserror = "1.0.52"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.35.1", features = [ "macros", "rt" ] }
surrealdb = { version = "1.0.2", features = [ "kv-mem" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0"
