[package]
name = "surrealdb-migrator"
version = "0.1.7"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["database", "migration"]
description = "SurrealDB migrator"
repository = "https://github.com/prabirshrestha/surrealdb-migrator"
readme = "README.md"

[features]
default = []

### Enable loading migrations from *.sql files in a given directory
from-directory = ["dep:include_dir"]

[dependencies]
include_dir = { version = "0.7.3", optional = true }
sha256 = "1.5.0"
surrealdb = "1.1.1"
thiserror = "1.0.53"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.35.1", features = [ "macros", "rt" ] }
surrealdb = { version = "1.1.1", features = [ "kv-mem" ] }
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = "1.0"
